# 8PuzzleBenchmark

./: 8Puzzle.cpp  CMakeLists.txt  LICENSE.txt  README.txt  main.cpp  results.csv
InternalRepresentations/: InternalRepresentation.h
InternalRepresentations/IntegerState/: IntegerState.cpp  IntegerState.h
InternalRepresentations/NibbleState/: NibbleState.cpp  NibbleState.h
InternalRepresentations/StringState/: StringState.cpp  StringState.h
SearchAlgorithms/: SearchAlgorithm.cpp  SearchAlgorithm.h
SearchAlgorithms/AStarSearch/: AStarSearch.cpp  AStarSearch.h
SearchAlgorithms/BreadthFirstSearch/: BreadthFirstSearch.cpp  BreadthFirstSearch.h
SearchAlgorithms/DepthFirstSearch/: DepthFirstSearch.cpp  DepthFirstSearch.h
SearchAlgorithms/DepthFirstSearch/ProgressiveDeepeningSearch/: ProgressiveDeepeningSearch.cpp  ProgressiveDeepeningSearch.h
SearchAlgorithms/ProgressiveDeepeningSearch/: ProgressiveDeepeningSearch.cpp  ProgressiveDeepeningSearch.h
TypedState/: MovementType.cpp  MovementType.h  TypedState.cpp  TypedState.h
